fixed overlap on font weight

--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,6 @@ a:hover, a:focus {
 
 h1, h2, h3 {
     font-family: Raleway, 'Helvetica Neue', Helvetica, sans-serif;
-    font-weight: 300;
 }
 
 h1 {
@@ -40,7 +39,6 @@ h2, h3 {
 
 h2 {
     font-size: 150%;
-    margin: 0;
 }
 
 h3 {
